Fix: chips and add survey button blurry appearance. They are now sharp.

--- a/client_viten/src/app/admin/homepage-admin/homepage-admin.component.scss
+++ b/client_viten/src/app/admin/homepage-admin/homepage-admin.component.scss
@@ -69,12 +69,13 @@ md-card {
 
 .chip {
   display: inline-block;
-  transform: scale(0.68);
   position: absolute;
-  top: 27px;
-  right: 65px;
+  top: 33px;
+  right: 72px;
   color: white;
   md-chip {
+    font-size: 9px; // down from 13px default
+    padding: 4px 7px 3px 7px; // down from 8px 12px 8px 12px default
     outline: none;
   }
   .mat-accent {
